--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,6 @@
     "prefer_related_applications": true,
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#c3ff00",
-    "background_color": "#27262b"
+    "theme_color": "hsl(382 100% 50% / 1)",
+    "background_color": "#000"
 }
