--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,6 @@
     "prefer_related_applications": true,
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "hsl(382 100% 50% / 1)",
-    "background_color": "#000"
+    "theme_color": "hsl(358 81% 49%)",
+    "background_color": "hsl(0deg 0% 11%)"
 }
